--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,13 @@
-
-
-
 body {
   margin: 0;
   padding: 0;
-  /* font-family: sans-serif; */
   font-family: sans-serif
 }
-.App{
-  margin-top: 0;
+input{
+  max-width: 500px;
 }
 
-
+/* navbar  */
 .header-section{
 
   height:50px;
@@ -27,13 +23,8 @@ body {
   text-align: center;
 }
 
-.home{
-  margin-top: 10px;
-  /* width: 300px; */
-}
-/* .table{
-  width: 300px;
-} */
+
+/* add  contact button */
 .add-contact-btn{
   border: 1px solid grey;
   background-color: transparent;
@@ -42,12 +33,22 @@ body {
   margin-bottom: 20px;
   margin-left: 10px;
 }
+
 .add-contact-btn:hover{
   background-color: grey;
   color: white;
   font-size: large;
 
 }
+
+
+/* home page  (/ route) */
+.home{
+  margin-top: 10px;
+  
+}
+
+/* actions button. edit and delete */
 .actions-button{
   background-color: transparent;
   border: 1px solid white;
@@ -60,26 +61,7 @@ body {
 }
 
 
-
-.blue{
-  width:700px;
-  height: 900px;
-  background-color: yellow;
-}
-
-/* .add-contact{
-  color:grey;
-  margin: auto;
-  margin-top: 25px;
-  background-color: rgb(212, 209, 209);
-  max-width:500px;
-  padding: 10px;
-  border-radius:10px;
-
-} */
-/* .add-contact .btn{
-  margin: 10px 10px 10px 0px;
-} */
+/* edit and add contact page */
 .edits, .add-contact{
   color:grey;
   margin: auto;
@@ -91,7 +73,4 @@ body {
 }
 .edits .btn, .add-contact .btn{
   margin: 10px 10px 10px 0px;
-}
-input{
-  max-width: 500px;
 }
